--- a/Pipfile
+++ b/Pipfile
@@ -6,7 +6,8 @@ name = "pypi"
 [packages]
 flask = "2.2.2"
 flask-migrate = "3.1.0"
-flask-sqlalchemy = "2.5.1"
+flask-sqlalchemy = "3.0.3"
+Werkzeug = "2.2.2"
 ipdb = "0.13.9"
 importlib-metadata = "6.0.0"
 importlib-resources = "5.10.0"
